fix(skills): align all items by center

--- a/src/sections/Skills/Skills.scss
+++ b/src/sections/Skills/Skills.scss
@@ -109,6 +109,7 @@
       margin: 0 auto;
       padding: 1.5rem;
       width: 100%;
+      align-items: center;
 
       &__logo {
         display: flex;
